fix font on mobile and Safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: 'Bariol', sans-serif;
+  font-family: Bariol-Regular, sans-serif;
 }
 
 h1 {
@@ -20,7 +20,11 @@ footer {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/bariol_regular-webfont.woff) format('woff');
+  src: url(/fonts/Bariol-Regular.eot);
+  src: url(/fonts/Bariol-Regular.otf) format('opentype');
+  src: url(/fonts/Bariol-Regular.svg) format('svg');
+  src: url(/fonts/Bariol-Regular.woff) format('woff');
+  src: url(/fonts/Bariol-Regular.woff2) format('woff2');
 }
 
 @font-face {
@@ -28,7 +32,11 @@ footer {
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url(/fonts/light-webfont.woff) format('woff');
+  src: url(/fonts/Bariol-Light.eot);
+  src: url(/fonts/Bariol-Light.otf) format('opentype');
+  src: url(/fonts/Bariol-Light.svg) format('svg');
+  src: url(/fonts/Bariol-Light.woff) format('woff');
+  src: url(/fonts/Bariol-Light.woff2) format('woff2');
 }
 
 @font-face {
@@ -36,7 +44,11 @@ footer {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/bariol_regular_italic-webfont.woff) format('woff');
+  src: url(/fonts/BariolRegular-Italic.eot);
+  src: url(/fonts/BariolRegular-Italic.otf) format('opentype');
+  src: url(/fonts/BariolRegular-Italic.svg) format('svg');
+  src: url(/fonts/BariolRegular-Italic.woff) format('woff');
+  src: url(/fonts/BariolRegular-Italic.woff2) format('woff2');
 }
 
 @font-face {
@@ -44,5 +56,9 @@ footer {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(/fonts/bariol_bold-webfont.woff) format('woff');
+  src: url(/fonts/Bariol-Bold.eot);
+  src: url(/fonts/Bariol-Bold.otf) format('opentype');
+  src: url(/fonts/Bariol-Bold.svg) format('svg');
+  src: url(/fonts/Bariol-Bold.woff) format('woff');
+  src: url(/fonts/Bariol-Bold.woff2) format('woff2');
 }
